--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,30 +1,11 @@
 /* Sidebar */
 
-.headlines-title {
-    font: 19px;
-    letter-spacing: 0.25px;
-    color: #FF0500;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-    position: relative;
-}
-
-@media only screen and (min-width: 1200px) {
-    .headlines-title {
-        font-size: 21px;
-    }
-}
-
-.bullet-list {
-    padding: 30px 0px;
-}
-
 .bullet {
     position: relative;
     padding: 15px 15px 15px 15px;
     top: 15px;
     left: -25px;
-    color: #FF0500;
+    color: #ff0500;
     list-style-position: inside;
     list-style-type: square;
 }
@@ -33,6 +14,10 @@
     font-weight: bold;
     font-size: 18px;
     color: #181818;
+}
+
+.bullet-list {
+    padding: 30px 0px;
 }
 
 .bullet-list li {
@@ -48,6 +33,18 @@
     border-top: 0;
 }
 
+.headlines-title {
+    font: 19px;
+    letter-spacing: 0.25px;
+    color: #ff0500;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+#sidebar-list {
+    margin-bottom: 40px;
+}
 
 .see-all {
     display: block;
@@ -68,13 +65,11 @@
     opacity: 0.6;
 }
 
-#sidebar-list {
-    margin-bottom: 40px;
+@media only screen and (min-width: 1200px) {
+    .headlines-title {
+        font-size: 21px;
+    }
 }
-
-/* ----------------------- */
-
-/* Sidebar small screen version */
 
 @media only screen and (max-width: 992px) {
     .sidebar {
@@ -97,7 +92,3 @@
         display: block;
     }
 }
-
-/* ----------------------- */
-
-
